%% AUTOGENERATED by tools/dbml/render.cjs from database/schema.dbml. DO NOT EDIT.
erDiagram
  schools {
    int id PK
    varchar code UK
    varchar name
  }
  student_groups {
    int id PK
    int school_id FK
    varchar name
    boolean is_technical
    int admission_year
  }
  students {
    int id PK
    int group_id FK
    varchar full_name
    boolean is_target_quota
    boolean is_paid
    boolean is_disabled
    smallint entrance_exams_sum "ВИ без русского языка и инд. достижений"
    decimal gpa_sem12 "аттестации 1-2 сем"
    decimal gpa_basic
    smallint entrance_test_score "входное тестирование"
  }
  modules {
    int id PK
    int school_id FK "школа-организатор"
    varchar title
    varchar module_type "technical|humanitarian|free"
    int min_students
    int max_students
    varchar academic_year
  }
  disciplines {
    int id PK
    int module_id FK
    varchar title
    tinyint semester "3|4|5 ADR-005"
  }
  module_eligible_schools {
    int module_id FK
    int school_id FK
  }
  applications {
    int id PK
    int student_id FK "UK"
    datetime submitted_at
  }
  application_items {
    int id PK
    int application_id FK
    int module_id FK
    tinyint priority "1-3"
  }
  assignments {
    int id PK
    int student_id FK "UK"
    int module_id FK
    varchar algorithm "date|criteria"
    varchar source "competition|free|target_quota"
    int rank_position
    datetime assigned_at
  }
  schools ||--o{ student_groups : ""
  student_groups ||--o{ students : ""
  schools ||--o{ modules : ""
  modules ||--o{ disciplines : ""
  modules ||--o{ module_eligible_schools : ""
  schools ||--o{ module_eligible_schools : ""
  students ||--o{ applications : ""
  applications ||--o{ application_items : ""
  modules ||--o{ application_items : ""
  students ||--o{ assignments : ""
  modules ||--o{ assignments : ""
